# k-means_using_OpenMP

./: CMakeLists.txt  README.md
src/: help.h  kmeans.c  kmeans.h  main.c
